--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://tejaswiniu.github.io/AdriaticSea/",
+  "homepage": "https://tejaswiniu.github.io/AdriaticSea",
   "name": "ad_sea",
   "version": "0.1.0",
   "private": true,
